--- a/pages/order/detail/detail.wxss
+++ b/pages/order/detail/detail.wxss
@@ -89,3 +89,12 @@ page{
   font-size:14px;
   color:white;
 }
+.wbutton{
+  margin-top: 40rpx;
+  margin-left: 100rpx;
+  width: 75%; 
+  height: 100%; 
+  display: flex; 
+  align-items: center;
+  background: #FF9C35;
+}
